<resources>
    <string name="app_name">GPSTracker</string>
    <string name="login_button_name">Войти через VK</string>
    <string name="input_password">Введите пароль</string>
    <string name="input_login">Введите логин</string>
    <string name="register_button_name">Еще нет аккаунта? Давай создадим!</string>
    <string name="logo">Logo</string>
    <string name="input_email">Email</string>
    <string name="input_phone">Введите номер телефона</string>
    <string name="signup_button_name">Create Account</string>
    <string name="action_settings">Настройки</string>
    <string-array name="views_array">
        <item>Вход</item>
        <item>Контакты</item>
    </string-array>
    <string name="menu">Меню</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="add_following">Add following</string>
    <string name="adress_input">Введите адрес</string>
    <string name="follow_up">Подписаться на следование</string>
    <string name="contacts">Контакты</string>
    <string name="settings">Настройки</string>
    <string name="save_settings">Сохранить</string>
    <string name="emergence_call_settings">Настройки экстренного вызова</string>
    <string name="call_number">Звонок по телефону</string>
    <string name="emergency_call">Экстренный вызов 112</string>
    <string name="diactivate">Отслючить</string>
    <string name="app_version">Version 1.0</string>
    <string name="welcome_text">Добро пожаловать в GPSTracker!</string>
    <string name="input_name">Введите имя для оповещений</string>
</resources>
